Still fixing z-index for dice

--- a/src/sass/sections/_dice.scss
+++ b/src/sass/sections/_dice.scss
@@ -4,12 +4,15 @@
     align-items: center;
 }
 
+.dice-wrapper{
+    z-index: -1;
+}
+
 .dice {
     position: relative;
     width: 100px;
     height: 100px;
     transform-style: preserve-3d;
-    z-index: 0;
     transition: 1s ease;
 }
 
